<resources>
    <string name="app_name">Todo</string>
    <string name="todo">Todo</string>
    <string name="todos">Todos</string>
    <string name="no_todos_found">No todos found!</string>
    <string name="add">Add</string>
    <string name="show_all">Show all</string>
    <string name="show_only_open">Show only open</string>
    <string name="show_only_completed">Show only completed</string>
    <string name="select_theme">Select theme</string>
    <string name="all">All</string>
    <string name="open">Open</string>
    <string name="completed">Completed</string>
    <string name="title">Title</string>
    <string name="title_cannot_be_empty">Title cannot be empty</string>
    <string name="due_date">Due Date</string>
    <string name="due_time">Due Time</string>
    <string name="additional_notes">Additional notes</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="delete_todo_title">Delete Todo</string>
    <string name="delete_todo_message">Do you really want to delete this todo?</string>
    <string name="select_your_preferred_theme">Select your preferred theme</string>
    <string name="orange">Orange</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
</resources>