<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_item_add"
        android:title="@string/add"
        android:icon="@drawable/ic_baseline_add_circle_outline_24"
        app:showAsAction="always"/>
    <group android:id="@+id/group_show">
        <item
            android:id="@+id/menu_item_show_only_open"
            android:title="@string/show_only_open" />
        <item
            android:id="@+id/menu_item_show_only_completed"
            android:title="@string/show_only_completed" />
        <item
            android:id="@+id/menu_item_show_all"
            android:title="@string/show_all" />
    </group>
    <group android:id="@+id/group_theme">
        <item android:id="@+id/menu_item_select_theme" android:title="@string/select_theme" />
    </group>
</menu>