<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SelectThemeActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/select_theme_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_your_preferred_theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

        <Button
            android:id="@+id/orange_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/orange"
            android:backgroundTint="@color/orange"
            app:layout_constraintEnd_toEndOf="@+id/select_theme_text"
            app:layout_constraintStart_toStartOf="@+id/select_theme_text"
            app:layout_constraintTop_toBottomOf="@+id/select_theme_text"
            />

        <Button
            android:id="@+id/green_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/green"
            android:backgroundTint="@color/green"
            app:layout_constraintEnd_toEndOf="@+id/select_theme_text"
            app:layout_constraintStart_toStartOf="@+id/select_theme_text"
            app:layout_constraintTop_toBottomOf="@+id/orange_button" />
        <Button
            android:id="@+id/blue_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/blue"
            android:backgroundTint="@color/blue"
            app:layout_constraintEnd_toEndOf="@+id/select_theme_text"
            app:layout_constraintStart_toStartOf="@+id/select_theme_text"
            app:layout_constraintTop_toBottomOf="@+id/green_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>